# agentic-research-writer

./: .env.example  .gitignore  .mcp.json  Makefile  pyproject.toml
.agents/skills/research/: SKILL.md
datasets/linkedin_paul_iusztin/: im-currently-designing-a-second-brain-ai-agent_research.md
scripts/: test_research_workflow.py
src/research/: server.py
src/research/app/: youtube_handler.py
src/research/config/: constants.py  prompts.py  settings.py
src/research/routers/: prompts.py  tools.py
src/research/tools/: analyze_youtube_video_tool.py  compile_research_tool.py  deep_research_tool.py
src/research/utils/: llm.py
src/writing/: server.py
src/writing/routers/: tools.py
src/writing/tools/: edit_post_tool.py  generate_image_tool.py  generate_post_tool.py
