[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-research-writer"
version = "0.1.0"
description = "Deep Research + Technical Writer Multi-Agent System"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.4.2",
    "fastmcp>=3.4.2",
    "google-genai>=2.10.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15.20",
]

[tool.hatch.build.targets.wheel]
packages = ["src/research"]
